--- a/base/index.html
+++ b/base/index.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             基本静态网站模板
         </title>
-        <!-- version "1.5.0.5 build 20180227.014734" -->
+        <!-- version "1.5.0.13 build 20180227.022812" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="广州市德云数科技有限公司 Log" title="点这里进入官网首页">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="德云社区 Log" title="点这里进入官网首页">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://help.digitser.cn/zh-CN.html">
-                                数据资料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                注册
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                登录
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度网盘
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注册
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登录
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -86,78 +83,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 应用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browser.html" style="text-indent:1em;">
                                                     ├ 数字浏览器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/brwspro.html" style="text-indent:1em;">
                                                     ├ 数字浏览器专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 数字翻译
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 数据采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 数据比较
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 数字快递
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 数字样机
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 数字预算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html" style="text-indent:1em;">
+                                                    └ 数字翻译
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/compare.html" style="text-indent:1em;">
+                                                    └ 数据比较
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成开发环境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 网页
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepro.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepy.html" style="text-indent:1em;">
                                                     └ 数字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ftsearch.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ft_repl.html" style="text-indent:1em;">
                                                     ├ 全文替换
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ws_dlink.html" style="text-indent:1em;">
                                                     └ 死链检测
                                                 </a>
                                             </li>
@@ -228,12 +215,12 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="数字 IDE 网页" title="数字 IDE 网页">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html">
                                         <b>
                                             4.4.8.72 build 20170929.230121
                                         </b>
@@ -244,12 +231,12 @@
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="数字翻译" title="数字翻译">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html">
                                         <b>
                                             5.2.4.18 build 20171001.160156
                                         </b>
