--- a/base/en-US.html
+++ b/base/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Basic Static Website Template
         </title>
-        <!-- version "1.5.0.7 build 20180227.014909" -->
+        <!-- version "1.5.0.15 build 20180227.023239" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -27,27 +27,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a target="_blank" href="http://dts.digitser.cn/">
-                            <img src="images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="China Guangzhou Digits Cloud Technology Co., Ltd. Log" title="Click here to enter the official website home page">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/en-US.html">
+                            <img class="img-responsive" src="images/logo.png" style="min-width:208px;"
+                            alt="Digits Cloud Community Log" title="Click here to enter the official website home page">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://help.digitser.cn/en-US.html">
-                                Data
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                Register
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                Sign in
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            Baidu Network Disk
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Register
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            Sign In
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -86,78 +83,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ App
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser.html" style="text-indent:1em;">
                                                     ├ Digital Browser
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/brwspro.html" style="text-indent:1em;">
                                                     ├ Digital Browser Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ Digital Translate
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ Data Collect
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ Data Compare
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/express.html" style="text-indent:1em;">
-                                                    ├ Digital Express
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ Digital Machine
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/budget.html" style="text-indent:1em;">
-                                                    └ Digital Budget
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html" style="text-indent:1em;">
+                                                    └ Digital Translate
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare.html" style="text-indent:1em;">
+                                                    └ Data Compare
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html" style="text-indent:1em;">
                                                     ├ Digital IDE for Web
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro.html" style="text-indent:1em;">
                                                     ├ Digital IDE Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ Digital IDE for Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ Digital IDE for C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy.html" style="text-indent:1em;">
                                                     └ Digital IDE for Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ Plugin
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ Gadget
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ Applet
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch.html" style="text-indent:1em;">
                                                     ├ Full Text Search
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl.html" style="text-indent:1em;">
                                                     ├ Full Text Replace
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlink.html" style="text-indent:1em;">
                                                     └ Dead Link Detect
                                                 </a>
                                             </li>
@@ -228,12 +215,12 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="Digital IDE for Web" title="Digital IDE for Web">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/product/ide/ideweb.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html">
                                         <b>
                                             4.4.8.72 build 20170929.230121
                                         </b>
@@ -244,12 +231,12 @@
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="Digital Translate" title="Digital Translate">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/product/app/translate.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html">
                                         <b>
                                             5.2.4.18 build 20171001.160156
                                         </b>
