--- a/base/zh-TW/about.html
+++ b/base/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.5 build 20180227.020448" -->
+        <!-- version "0.9.0.16 build 20180227.023041" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -25,27 +25,24 @@
         <div class="navbar navbar-default navbar-static-top" style="font-family:'微软雅黑'">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
-                        <a href="http://dts.digitser.cn/">
-                            <img src="../images/logo.png" class="img-responsive" style="max-height:105px;"
-                            alt="廣州市德雲數科技有限公司 Log" title="點這裏進入官網首頁">
+                    <div class="col-md-8">
+                        <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
+                            <img class="img-responsive" src="../images/logo.png" style="min-width:208px;"
+                            alt="德雲社區 Log" title="點這裏進入官網首頁">
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-9"></div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="http://data.digitser.cn/zh-TW.html">
-                                數據資料
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                注冊
-                            </a>
-                            <a class="btn btn-primary" style="font-size:12px;color:#7d7d7d;text-align:center;width:90px;margin-top:0px;background:#f8f8f8;border:0px;border-radius:3px;" href="##">
-                                登錄
-                            </a>
-                        </div>
+                    <div class="col-md-4" style="padding-top:8px;text-align:right;">
+                        <a target="_blank" href="https://pan.baidu.com/s/1dGxcM7R" style="color:#655753;">
+                            百度網盤
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            注冊
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="##" style="color:#655753;">
+                            登錄
+                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -53,7 +50,7 @@
                         <div class="row">
                             <ul class="nav nav-pills navbar-left">
                                 <li>
-                                    <a href="../index.html">
+                                    <a href="../zh-TW.html">
                                         <b>
                                             首頁
                                         </b>
@@ -84,78 +81,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 應用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browser.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/brwspro.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 數字翻譯
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 數據采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 數據比較
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 數字快遞
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 數字樣機
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 數字預算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html" style="text-indent:1em;">
+                                                    └ 數字翻譯
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/compare.html" style="text-indent:1em;">
+                                                    └ 數據比較
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成開發環境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 網頁
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepro.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepy.html" style="text-indent:1em;">
                                                     └ 數字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ftsearch.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ft_repl.html" style="text-indent:1em;">
                                                     ├ 全文替換
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ws_dlink.html" style="text-indent:1em;">
                                                     └ 死鏈檢測
                                                 </a>
                                             </li>
@@ -200,18 +187,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="row">
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../index.html">
-                                简体中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../zh-TW.html">
-                                繁體中文
-                            </a>
-                            <a class="btn btn-primary" target="_blank" style="color:#7d7d7d;text-align:center;width:90px;margin-top:5px;background:#f8f8f8;border:0px;border-radius:3px;" href="../en-US.html">
-                                English
-                            </a>
-                        </div>
+                    <div class="col-md-3" style="padding-top:10px;text-align:right;">
+                        <a target="_blank" href="../zh-CN.html" style="color:#5b5b5b;">
+                            简体中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../zh-TW.html" style="color:#5b5b5b;">
+                            繁體中文
+                        </a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a target="_blank" href="../en-US.html" style="color:#5b5b5b;">
+                            English
+                        </a>
                     </div>
                 </div>
             </div>
@@ -371,7 +358,7 @@
                             <div class="row">
                                 <ul class="nav nav-pills navbar-left">
                                     <li>
-                                        <a href="../index.html">
+                                        <a href="../zh-TW.html">
                                             <b>
                                                 首頁
                                             </b>
