--- a/orange-red/zh-CN/about.html
+++ b/orange-red/zh-CN/about.html
@@ -7,7 +7,7 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.0.9 build 20180227.020633" -->
+        <!-- version "0.9.0.15 build 20180227.022812" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -81,78 +81,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 应用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browser.html" style="text-indent:1em;">
                                                     ├ 数字浏览器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/brwspro.html" style="text-indent:1em;">
                                                     ├ 数字浏览器专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 数字翻译
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 数据采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 数据比较
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 数字快递
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 数字样机
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 数字预算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html" style="text-indent:1em;">
+                                                    └ 数字翻译
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/compare.html" style="text-indent:1em;">
+                                                    └ 数据比较
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成开发环境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 网页
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepro.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 数字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepy.html" style="text-indent:1em;">
                                                     └ 数字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ftsearch.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ft_repl.html" style="text-indent:1em;">
                                                     ├ 全文替换
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ws_dlink.html" style="text-indent:1em;">
                                                     └ 死链检测
                                                 </a>
                                             </li>
