--- a/orange-red/zh-TW/about.html
+++ b/orange-red/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.10 build 20180227.020540" -->
+        <!-- version "0.9.0.17 build 20180227.023041" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -81,78 +81,68 @@
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 應用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browser.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/brwspro.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/translate.html" style="text-indent:1em;">
-                                                    ├ 數字翻譯
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/collect.html" style="text-indent:1em;">
-                                                    ├ 數據采集
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/compare.html" style="text-indent:1em;">
-                                                    ├ 數據比較
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/express.html" style="text-indent:1em;">
-                                                    ├ 數字快遞
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/machine.html" style="text-indent:1em;">
-                                                    ├ 數字樣機
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/app/budget.html" style="text-indent:1em;">
-                                                    └ 數字預算
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html" style="text-indent:1em;">
+                                                    └ 數字翻譯
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/compare.html" style="text-indent:1em;">
+                                                    └ 數據比較
+                                                </a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ IDE 集成開發環境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 網頁
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepro.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idejava.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE Java
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idec.html" style="text-indent:1em;">
-                                                    ├ 數字 IDE C/C++
-                                                </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepy.html" style="text-indent:1em;">
                                                     └ 數字 IDE Python
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/plugin/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/plugin/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         ├ 插件
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/index.html" style="color:#2F7DC5;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/gadget/index.html" style="color:#2F7DC5;">
+                                                    <b>
+                                                        ├ 小工具
+                                                    </b>
+                                                </a>
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/index.html" style="color:#2F7DC5;">
                                                     <b>
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ftsearch.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ft_repl.html" style="text-indent:1em;">
                                                     ├ 全文替換
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/product/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ws_dlink.html" style="text-indent:1em;">
                                                     └ 死鏈檢測
                                                 </a>
                                             </li>
