--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.5.0.17 build 20180227.023239" -->
+        <!-- version "1.5.0.22 build 20180227.023924" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -222,12 +222,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html">
                                         <b>
-                                            4.4.8.72 build 20170929.230121
+                                            5.6.5.3 build 20180218.113907
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── Digital IDE for Web 2017
+                                    ──
+                                    Digital IDE for Web 2018.5
                                 </p>
                             </div>
                             <div class="item">
@@ -238,12 +239,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html">
                                         <b>
-                                            5.2.4.18 build 20171001.160156
+                                            6.4.1.7 build 20180219.133658
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ──  Digital Translate 2017
+                                    ──
+                                    Digital Translate 2018.5
                                 </p>
                             </div>
                         </div>
@@ -262,7 +264,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            Company Profile
+                            Community Profile
                         </b>
                     </h3>
                     <p></p>
