--- a/orange-red/zh-CN/about.html
+++ b/orange-red/zh-CN/about.html
@@ -7,7 +7,7 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.0.15 build 20180227.022812" -->
+        <!-- version "0.9.0.16 build 20180227.023811" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -219,7 +219,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司简介
+                            社区简介
                         </b>
                     </h3>
                     <p></p>
