--- a/orange-red/zh-TW/about.html
+++ b/orange-red/zh-TW/about.html
@@ -7,7 +7,7 @@
         <title>
             關於
         </title>
-        <!-- version "0.9.0.17 build 20180227.023041" -->
+        <!-- version "0.9.0.18 build 20180227.023837" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -219,7 +219,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司簡介
+                            社區簡介
                         </b>
                     </h3>
                     <p></p>
