--- a/base/zh-TW.html
+++ b/base/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             基本靜態網站模闆
         </title>
-        <!-- version "1.5.0.15 build 20180227.023041" -->
+        <!-- version "1.5.0.20 build 20180227.023837" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -222,12 +222,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html">
                                         <b>
-                                            4.4.8.72 build 20170929.230121
+                                            5.6.5.3 build 20180218.113907
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 數字 IDE 網頁 2017
+                                    ──
+                                    數字 IDE 網頁 2018.5
                                 </p>
                             </div>
                             <div class="item">
@@ -238,12 +239,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html">
                                         <b>
-                                            5.2.4.18 build 20171001.160156
+                                            6.4.1.7 build 20180219.133658
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 數字翻譯 2017
+                                    ──
+                                    數字翻譯 2018.5
                                 </p>
                             </div>
                         </div>
@@ -262,7 +264,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司簡介
+                            社區簡介
                         </b>
                     </h3>
                     <p></p>
