--- a/orange-red/zh-CN.html
+++ b/orange-red/zh-CN.html
@@ -9,7 +9,7 @@
             自适应手机-平板-PC
             橙红静态网站模板
         </title>
-        <!-- version "1.5.0.17 build 20180227.022812" -->
+        <!-- version "1.5.0.22 build 20180227.023811" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -222,12 +222,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html">
                                         <b>
-                                            4.4.8.72 build 20170929.230121
+                                            5.6.5.3 build 20180218.113907
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 数字 IDE 网页 2017
+                                    ──
+                                    数字 IDE 网页 2018.5
                                 </p>
                             </div>
                             <div class="item">
@@ -238,12 +239,13 @@
                                 <p style="text-align:center;font-size:18px;">
                                     <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html">
                                         <b>
-                                            5.2.4.18 build 20171001.160156
+                                            6.4.1.7 build 20180219.133658
                                         </b>
                                     </a>
                                 </p>
                                 <p style="text-align:center;font-family:'微软雅黑';font-size:13px;color:#7d7d7d;">
-                                    ── 数字翻译 2017
+                                    ──
+                                    数字翻译 2018.5
                                 </p>
                             </div>
                         </div>
@@ -262,7 +264,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司简介
+                            社区简介
                         </b>
                     </h3>
                     <p></p>
